fix: nav title align and padding

--- a/css/styles.css
+++ b/css/styles.css
@@ -74,17 +74,17 @@ nav {
   width: 100%;
   height: 100px;
   display: flex;
-  text-align: center;
   background-color: #252831;
 }
 nav h1 {
-  align-content: center;
+  text-align: center;
   margin: auto;
 }
 nav h1 a {
   color: #fff;
   font-weight: 200;
   letter-spacing: 10px;
+  padding: 0 20px;
   text-transform: uppercase;
 }
 #breadcrumb {
